<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AboutApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_150dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDesc"
            android:src="@drawable/utopia_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10dp"
            android:text="@string/about_utopia"
            android:textSize="@dimen/dimen_16sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/utopia_2019_promo"
            android:textSize="@dimen/dimen_18sp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/opensans"/>

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtubeVideoView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_40dp"/>
    </LinearLayout>
</ScrollView>